Clean project without large media files

--- a/index.html
+++ b/index.html
@@ -1399,11 +1399,12 @@ Account
 <div class="video-container">
 <div class="video-wrapper">
 <!-- Replace the src with your Google Drive video embed link -->
-<iframe
-src="YOUR_GOOGLE_DRIVE_VIDEO_EMBED_LINK_HERE"
-allow="autoplay; encrypted-media"
-allowfullscreen>
-</iframe>
+<iframe 
+        src="https://drive.google.com/file/d/1Q2aoaQ94E7tHoegbi-4T4dC8D9Ik3Zlv/preview"
+        width="720"
+        height="405"
+        allow="autoplay">
+    </iframe>
 </div>
 </div>
 </section>
