Added Readme.md and did some corrections

--- a/quiz.html
+++ b/quiz.html
@@ -1263,7 +1263,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="course-overview.html">Course Overview</a></li>
                 <li><a href="quiz.html" class="active">Start Quiz</a></li>
-                <li><a href="lecturer.html">Lecturer</a></li>
+                <li><a href="about.html">About</a></li>
                 
                 <li><a href="contact.html">Contact</a></li>
             </ul>
@@ -1297,7 +1297,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="course-overview.html">Course Overview</a></li>
             <li><a href="quiz.html" class="active">Start Quiz</a></li>
-            <li><a href="lecturer.html">Lecturer</a></li>
+            <li><a href="about.html">About</a></li>
            
             <li><a href="contact.html">Contact</a></li>
         </ul>
